packages/build/tests/mutate/fixtures/valid/plugin.js
export const onPreBuild = function ({ netlifyConfig: { plugins } }) {
  console.log(Array.isArray(plugins))
}
