packages/build/tests/mutate/fixtures/invalid_syntax/plugin.js
export const onPreBuild = function ({ netlifyConfig }) {
  netlifyConfig.build.command = false
}
